Cursor::supportYields SERVER-1453